--- a/NBA/src/app/views/profilo-page/profilo-page.component.html
+++ b/NBA/src/app/views/profilo-page/profilo-page.component.html
@@ -143,9 +143,9 @@
                     <div class="w-full h-6 bg-secondary"></div>
                     <div class="w-full">
                         <div class="flex lg:w-full w-80% lg:h-8 h-5 lg:mt-10 mt-5 lg:mb-5 mb-4 lg:justify-normal justify-between">
-                            <button (click)="functionChangeManuPreferiti('tutti')" class="rounded-full lg:mr-2 lg:px-6 px-3 lg:py-1 text-sm" [ngClass]="{'bg-secondary': menuPreferitiSelected === 'tutti', 'bg-[#ACDEFF]': menuPreferitiSelected !== 'tutti', 'text-white': menuPreferitiSelected === 'tutti'}">
+                            <!-- <button (click)="functionChangeManuPreferiti('tutti')" class="rounded-full lg:mr-2 lg:px-6 px-3 lg:py-1 text-sm" [ngClass]="{'bg-secondary': menuPreferitiSelected === 'tutti', 'bg-[#ACDEFF]': menuPreferitiSelected !== 'tutti', 'text-white': menuPreferitiSelected === 'tutti'}">
                                 TUTTI
-                            </button>
+                            </button> -->
 
                             <button (click)="functionChangeManuPreferiti('squadre')" class="rounded-full lg:mx-2 lg:px-6 px-3 lg:py-1 text-sm" [ngClass]="{'bg-secondary': menuPreferitiSelected === 'squadre', 'bg-[#ACDEFF]': menuPreferitiSelected !== 'squadre' , 'text-white': menuPreferitiSelected === 'squadre'}">
                                 SQUADRE
@@ -157,7 +157,7 @@
 
                         </div>
                     </div>
-                    <div *ngIf="menuPreferitiSelected==='tutti'" class="w-full flex flex-wrap mt-5">
+                    <!-- <div *ngIf="menuPreferitiSelected==='tutti'" class="w-full flex flex-wrap mt-5">
                         <div class="lg:w-1/3 w-full flex justify-center flex-wrap my-8">
                             <p class="text-center text-base w-full justify-center flex mb-2">SQUADRE: </p>
                             <div class="w-[80%] bg-primary h-24 rounded-3xl flex flex-wrap">
@@ -181,7 +181,7 @@
                                 <button class="px-6 py-1 text-white mt-2 bg-secondary rounded-full">Rimuovi</button>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div *ngIf="menuPreferitiSelected==='articoli'" class="w-full flex flex-wrap mt-5">
                         <div class="w-1/3 flex flex-wrap my-8">
                             <div class="w-[80%] bg-primary h-24 rounded-3xl flex items-center justify-center text-xl">
@@ -201,71 +201,24 @@
                         </div>
                     </div>
                     <div *ngIf="menuPreferitiSelected==='squadre'" class="w-full flex flex-wrap mt-5">
-                        <div class="w-1/3 flex flex-wrap my-8">
-                            <div class="w-[80%] bg-primary h-24 rounded-3xl flex flex-wrap">
-                                <div class="w-2/5 flex justify-center">
-                                    <div class="w-20 h-20 m-2 bg-white rounded-full"></div>
+                        <ng-container *ngFor="let team of favouriteTeams, let i=index">
+
+                            <div class="w-1/3 flex flex-wrap my-8">
+                                <div class="w-[80%] bg-primary h-auto rounded-3xl flex flex-wrap">
+                                    <div class="w-2/5 h-auto flex justify-center">
+                                        <div class="w-20 h-auto m-2 bg-white rounded-full">
+                                            <img class="w-20 h-auto" src={{team.logo}} alt="">
+                                        </div>
+                                    </div>
+                                    <div class="w-3/5 flex items-center">
+                                        <p class="text-white text-xl">{{team.teamName}}</p>
+                                    </div>
                                 </div>
-                                <div class="w-3/5 flex items-center">
-                                    <p class="text-white text-xl">Nome squadra</p>
-                                </div>
-                            </div>
-                            <div class="w-[80%] flex justify-end">
-                                <button class="px-6 py-1 text-white mt-2 bg-secondary rounded-full">Rimuovi</button>
-                            </div>
-                        </div>
-                        <div class="w-1/3 flex flex-wrap justify-center my-8">
-                            <div class="w-[80%] bg-primary h-24 rounded-3xl flex flex-wrap">
-                                <div class="w-2/5 flex justify-center">
-                                    <div class="w-20 h-20 m-2 bg-white rounded-full"></div>
-                                </div>
-                                <div class="w-3/5 flex items-center">
-                                    <p class="text-white text-xl">Nome squadra</p>
+                                <div class="w-[80%] flex justify-end">
+                                    <button class="px-6 py-1 text-white mt-2 bg-secondary rounded-full" (click)="aggiungiRimuoviPreferitiTeams(team.id)">Rimuovi</button>
                                 </div>
                             </div>
-                            <div class="w-[80%] flex justify-end">
-                                <button class="px-6 py-1 text-white mt-2 bg-secondary rounded-full">Rimuovi</button>
-                            </div>
-                        </div>
-                        <div class="w-1/3 flex flex-wrap justify-end my-8">
-                            <div class="w-[80%] bg-primary h-24 rounded-3xl flex flex-wrap">
-                                <div class="w-2/5 flex justify-center">
-                                    <div class="w-20 h-20 m-2 bg-white rounded-full"></div>
-                                </div>
-                                <div class="w-3/5 flex items-center">
-                                    <p class="text-white text-xl">Nome squadra</p>
-                                </div>
-                            </div>
-                            <div class="w-[80%] flex justify-end">
-                                <button class="px-6 py-1 text-white mt-2 bg-secondary rounded-full">Rimuovi</button>
-                            </div>
-                        </div>
-                        <div class="w-1/3 flex flex-wrap my-8">
-                            <div class="w-[80%] bg-primary h-24 rounded-3xl flex flex-wrap">
-                                <div class="w-2/5 flex justify-center">
-                                    <div class="w-20 h-20 m-2 bg-white rounded-full"></div>
-                                </div>
-                                <div class="w-3/5 flex items-center">
-                                    <p class="text-white text-xl">Nome squadra</p>
-                                </div>
-                            </div>
-                            <div class="w-[80%] flex justify-end">
-                                <button class="px-6 py-1 text-white mt-2 bg-secondary rounded-full">Rimuovi</button>
-                            </div>
-                        </div>
-                        <div class="w-1/3 flex flex-wrap justify-center my-8">
-                            <div class="w-[80%] bg-primary h-24 rounded-3xl flex flex-wrap">
-                                <div class="w-2/5 flex justify-center">
-                                    <div class="w-20 h-20 m-2 bg-white rounded-full"></div>
-                                </div>
-                                <div class="w-3/5 flex items-center">
-                                    <p class="text-white text-xl">Nome squadra</p>
-                                </div>
-                            </div>
-                            <div class="w-[80%] flex justify-end">
-                                <button class="px-6 py-1 text-white mt-2 bg-secondary rounded-full">Rimuovi</button>
-                            </div>
-                        </div>
+                        </ng-container>
                     </div>
                 </div>
                 <div class="" *ngIf="menuSelected==='impostazioni'">
@@ -365,7 +318,8 @@
                                                                 </div>
                                                                 <div class="w-2/3 pl-4">
                                                                     <p class="w-auto hover:cursor-pointer" [routerLink]="['/squadraDetail', team.id]">{{team.teamName}}</p>
-                                                                    <p class="w-[10%] hover:cursor-pointer">🖤</p>
+                                                                    <p class="w-[10%] hover:cursor-pointer" *ngIf="team.favourite===true" (click)="aggiungiRimuoviPreferitiTeams(team.id); team.favourite=!team.favourite">❤️</p>
+                                                                    <p class="w-[10%] hover:cursor-pointer" *ngIf="team.favourite!=true" (click)="aggiungiRimuoviPreferitiTeams(team.id); team.favourite=!team.favourite">🖤</p>
                                                                 </div>
                                                             </li>
                                                         </ul>
@@ -382,7 +336,8 @@
                                                                 </div>
                                                                 <div class="w-2/3 pl-4">
                                                                     <p class="w-auto hover:cursor-pointer" [routerLink]="['/squadraDetail', team.id]">{{team.teamName}}</p>
-                                                                    <p class="w-[10%] hover:cursor-pointer">🖤</p>
+                                                                    <p class="w-[10%] hover:cursor-pointer" *ngIf="team.favourite===true" (click)="aggiungiRimuoviPreferitiTeams(team.id); team.favourite=!team.favourite">❤️</p>
+                                                                    <p class="w-[10%] hover:cursor-pointer" *ngIf="team.favourite!=true" (click)="aggiungiRimuoviPreferitiTeams(team.id); team.favourite=!team.favourite">🖤</p>
                                                                 </div>
                                                             </li>
                                                         </ul>
@@ -399,7 +354,8 @@
                                                                 </div>
                                                                 <div class="w-2/3 pl-4">
                                                                     <p class="w-full" [routerLink]="['/squadraDetail', team.id]">{{team.teamName}}</p>
-                                                                    <p class="w-full">🖤</p>
+                                                                    <p class="w-[10%] hover:cursor-pointer" *ngIf="team.favourite===true" (click)="aggiungiRimuoviPreferitiTeams(team.id); team.favourite=!team.favourite">❤️</p>
+                                                                    <p class="w-[10%] hover:cursor-pointer" *ngIf="team.favourite!=true" (click)="aggiungiRimuoviPreferitiTeams(team.id); team.favourite=!team.favourite">🖤</p>
                                                                 </div>
                                                             </li>
                                                         </ul>
@@ -416,7 +372,8 @@
                                                                 </div>
                                                                 <div class="w-2/3 pl-4">
                                                                     <p class="w-full" [routerLink]="['/squadraDetail', team.id]">{{team.teamName}}</p>
-                                                                    <p class="w-full">🖤</p>
+                                                                    <p class="w-[10%] hover:cursor-pointer" *ngIf="team.favourite===true" (click)="aggiungiRimuoviPreferitiTeams(team.id); team.favourite=!team.favourite">❤️</p>
+                                                                    <p class="w-[10%] hover:cursor-pointer" *ngIf="team.favourite!=true" (click)="aggiungiRimuoviPreferitiTeams(team.id); team.favourite=!team.favourite">🖤</p>
                                                                 </div>
                                                             </li>
                                                         </ul>
@@ -433,7 +390,8 @@
                                                                 </div>
                                                                 <div class="w-2/3 pl-4">
                                                                     <p class="w-full" [routerLink]="['/squadraDetail', team.id]">{{team.teamName}}</p>
-                                                                    <p class="w-full">🖤</p>
+                                                                    <p class="w-[10%] hover:cursor-pointer" *ngIf="team.favourite===true" (click)="aggiungiRimuoviPreferitiTeams(team.id); team.favourite=!team.favourite">❤️</p>
+                                                                    <p class="w-[10%] hover:cursor-pointer" *ngIf="team.favourite!=true" (click)="aggiungiRimuoviPreferitiTeams(team.id); team.favourite=!team.favourite">🖤</p>
                                                                 </div>
                                                             </li>
                                                         </ul>
@@ -450,7 +408,8 @@
                                                                 </div>
                                                                 <div class="w-2/3 pl-4">
                                                                     <p class="w-full" [routerLink]="['/squadraDetail', team.id]">{{team.teamName}}</p>
-                                                                    <p class="w-full">🖤</p>
+                                                                    <p class="w-[10%] hover:cursor-pointer" *ngIf="team.favourite===true" (click)="aggiungiRimuoviPreferitiTeams(team.id); team.favourite=!team.favourite">❤️</p>
+                                                                    <p class="w-[10%] hover:cursor-pointer" *ngIf="team.favourite!=true" (click)="aggiungiRimuoviPreferitiTeams(team.id); team.favourite=!team.favourite">🖤</p>
                                                                 </div>
                                                             </li>
                                                         </ul>
@@ -462,7 +421,7 @@
                                     <div class="w-full flex justify-around items-center mb-8">
                                         <p class="text-xl font-bold">slot liberi: 2</p>
                                         <p class="text-xl font-bold">squadre scelte: 8</p>
-                                        <button class="bg-secondary rounded-full px-4 py-2 text-white" (click)="showTeams=false">CHIUDI E CONFERMA</button>
+                                        <button class="bg-secondary rounded-full px-4 py-2 text-white" routerLink="/profilo" (click)="showTeams=false">CHIUDI E CONFERMA</button>
                                     </div>
                                 </div>
                                 <div class="w-full flex justify-end items-center">
