--- a/NBA/src/app/views/profilo-page/profilo-page.component.html
+++ b/NBA/src/app/views/profilo-page/profilo-page.component.html
@@ -129,7 +129,7 @@
                                 </div>
                             </div>
                             <div class="w-full h-[1/4] my-2 bg-white border-solid border-[#1671AA] flex justify-center items-center">
-                                <button class="rounded-full border-2 my-1 px-6 border-blue-900">SEGUI</button>
+                                <button class="rounded-full border-2 my-1 px-6 border-blue-900">FOLLOW</button>
                             </div>
                         </div>
                     </div>
@@ -182,39 +182,33 @@
                             </div>
                         </div>
                     </div> -->
+
                     <div *ngIf="menuPreferitiSelected==='articoli'" class="w-full flex flex-wrap mt-5">
-                        <div class="w-1/3 flex flex-wrap my-8">
-                            <div class="w-[80%] bg-primary h-24 rounded-3xl flex items-center justify-center text-xl">
-                                <p class="text-white">Titolo articolo</p>
+                        <ng-container *ngFor="let article of favouriteArticles, let i=index">
+                            <div class="w-1/3 flex flex-wrap my-8" [ngClass]="{'justify-start': i % 3 === 0, 'justify-end': i % 3 === 2, 'justify-center': i % 3 === 1}">
+                                <div class="w-[80%] bg-primary h-auto rounded-3xl flex items-center">
+                                    <p class="text-white text-lg text-justify py-2 px-4">{{article.blog.titolo | uppercase}}</p>
+                                </div>
+                                <div class="w-[80%] h-10 flex justify-end">
+                                    <button class="px-6 py-1 text-white mt-2 bg-secondary rounded-full" (click)="aggiungiRimuoviPreferitiArticles(article.blog.id)">Rimuovi</button>
+                                </div>
                             </div>
-                            <div class="w-[80%] flex justify-end">
-                                <button class="px-6 py-1 text-white mt-2 bg-secondary rounded-full">Rimuovi</button>
-                            </div>
-                        </div>
-                        <div class="w-1/3 flex flex-wrap justify-center my-8">
-                            <div class="w-[80%] bg-primary h-24 rounded-3xl flex items-center justify-center text-xl">
-                                <p class="text-white">Titolo articolo</p>
-                            </div>
-                            <div class="w-[80%] flex justify-end">
-                                <button class="px-6 py-1 text-white mt-2 bg-secondary rounded-full">Rimuovi</button>
-                            </div>
-                        </div>
+                        </ng-container>
                     </div>
                     <div *ngIf="menuPreferitiSelected==='squadre'" class="w-full flex flex-wrap mt-5">
                         <ng-container *ngFor="let team of favouriteTeams, let i=index">
-
-                            <div class="w-1/3 flex flex-wrap my-8">
+                            <div class="w-1/3 flex flex-wrap my-8" [ngClass]="{'justify-start': i % 3 === 0, 'justify-end': i % 3 === 2, 'justify-center': i % 3 === 1}">
                                 <div class="w-[80%] bg-primary h-auto rounded-3xl flex flex-wrap">
-                                    <div class="w-2/5 h-auto flex justify-center">
-                                        <div class="w-20 h-auto m-2 bg-white rounded-full">
-                                            <img class="w-20 h-auto" src={{team.logo}} alt="">
+                                    <div class="w-2/5 h-24 flex justify-center">
+                                        <div class="w-20 h-20 m-2 bg-white rounded-full flex justify-center items-center">
+                                            <img class="w-16 h-auto" src={{team.logo}} alt="">
                                         </div>
                                     </div>
                                     <div class="w-3/5 flex items-center">
                                         <p class="text-white text-xl">{{team.teamName}}</p>
                                     </div>
                                 </div>
-                                <div class="w-[80%] flex justify-end">
+                                <div class="w-[80%] h-10 flex justify-end">
                                     <button class="px-6 py-1 text-white mt-2 bg-secondary rounded-full" (click)="aggiungiRimuoviPreferitiTeams(team.id)">Rimuovi</button>
                                 </div>
                             </div>
@@ -234,7 +228,6 @@
                                 <p class="font-bold">Nome Utente</p>
                             </div>
                             <form action="" class="w-3/4 flex flex-nowrap justify-around pl-4">
-
                                 <div class="w-1/2 flex justify-center">
                                     <input class="bg-gray-200 rounded-full text-center min-w-[50%]" type="text" max="50" placeholder="Nome nuovo">
                                 </div>
@@ -248,7 +241,6 @@
                                 <p class="font-bold">Età</p>
                             </div>
                             <form action="" class="w-3/4 flex flex-nowrap justify-around pl-4">
-
                                 <div class="w-1/2 flex justify-center">
                                     <input class="bg-gray-200 rounded-full text-center min-w-[50%]" type="number" min="16" max="99" inputmode="numeric">
                                 </div>
@@ -362,7 +354,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="lg:w-1/6 w-full flex flex-wrap justify-center">
+                                            <div class="lg:w-1/6 w-full flex flex-wrap justify-center border-l-2 border-dotted border-black">
                                                 <div class="lg:w-[80%] w-full">
                                                     <div class="flex justify-center">
                                                         <ul class="w-[90%] flex-col">
@@ -419,9 +411,11 @@
                                         </div>
                                     </div>
                                     <div class="w-full flex justify-around items-center mb-8">
-                                        <p class="text-xl font-bold">slot liberi: 2</p>
-                                        <p class="text-xl font-bold">squadre scelte: 8</p>
-                                        <button class="bg-secondary rounded-full px-4 py-2 text-white" routerLink="/profilo" (click)="showTeams=false">CHIUDI E CONFERMA</button>
+                                        <p class="text-xl font-bold">slot liberi: 3</p>
+                                        <p class="text-xl font-bold">squadre scelte: 2</p>
+                                        <button class="bg-secondary rounded-full px-4 py-2 text-white" (click)="showTeams=false">CHIUDI E CONFERMA</button>
+                                        <p class="text-xl font-bold">slot liberi: 4</p>
+                                        <p class="text-xl font-bold">squadre scelte: 1</p>
                                     </div>
                                 </div>
                                 <div class="w-full flex justify-end items-center">
