--- a/NBA/src/app/components/card-commento/card-commento.component.html
+++ b/NBA/src/app/components/card-commento/card-commento.component.html
@@ -4,11 +4,11 @@
             <div class="rounded-full bg-gray-500 h-[15vmin] w-[15vmin]"></div>
         </div>
         <div class="w-full">
-            <div class="flex justify-between w-full p-2">
+            <div class="flex justify-between  w-full p-2">
                 <div class="">NOME</div>
                 <div class="">DATA</div>
             </div>
-            <div class="w-full min-h-20 bg-white p-2">{{'@'}} contenuto del commento</div>
+            <div class="w-full min-h-20 rounded-[25px]  bg-white p-2">{{'@'}} contenuto del commento</div>
         </div>
     </div>
 </div>
