--- a/NBA/src/app/views/articolo-detail-page/articolo-detail-page.component.html
+++ b/NBA/src/app/views/articolo-detail-page/articolo-detail-page.component.html
@@ -14,9 +14,9 @@
                 <div class="my-5">
                     <img class="w-full object-contain" src="{{article.paragrafi[1].foto}}" alt="">
                 </div>
-                <div class="w-full h-20 bg-primary flex justify-center items-center">
-                    <h2 class=" text-white lg:text-xl text-xs font-bold">
-                        {{article.blog.riassunto}}
+                <div class="w-full lg:h-20 h-10 bg-primary flex justify-center items-center">
+                    <h2 class=" text-white lg:text-xl text-xs font-bold" *ngIf=" article.paragrafi[0].titoloParagrafo !== null">
+                        {{article.paragrafi[0].titoloParagrafo}}
                     </h2>
                 </div>
                 <div class="">
@@ -24,14 +24,18 @@
                         {{article.paragrafi[0].testoParagrafo}}
                     </p>
                 </div>
-
+                <div class="w-full lg:h-20 h-10 bg-primary flex justify-center items-center">
+                    <h2 class=" text-white lg:text-xl text-xs font-bold" *ngIf=" article.paragrafi[1].titoloParagrafo !== null">
+                        {{article.paragrafi[0].titoloParagrafo}}
+                    </h2>
+                </div>
                 <div class="lg:text-2xl text-sm p-5 text-justify">
                     {{article.paragrafi[1].testoParagrafo}}
                 </div>
 
-                <div class="w-full flex justify-around">
-                    <div class="w-1/5 flex justify-center" *ngFor="let _ of CountCommentForArticle, let i = index">
-                        <p class="border-primary border-4 bg-yellow-300 p-2 w-auto">{{article.tags[i] }}</p>
+                <div class="w-full flex flex-wrap lg:justify-around">
+                    <div class="lg:w-1/5 w-full flex lg:justify-center" *ngFor="let _ of CountCommentForArticle, let i = index">
+                        <p class="border-primary border-4 bg-yellow-300 p-2  w-auto h-auto m-1">{{article.tags[i]}}</p>
                     </div>
                    
                 </div>
@@ -40,13 +44,13 @@
                         <app-card-commento class="my-5"></app-card-commento>
                     </div>
                 </div>
-                <div class="bg-[#ACDEFF] w-full min-h-[25vh] flex flex-nowrap mt-4">
+                <div class="bg-[#ACDEFF] w-full min-h-[25vh]  flex flex-nowrap mt-4">
                     <div class="w-2/3 p-5">
-                        <textarea class="w-full min-h-full p-2" placeholder="inserisci il commento" name="" id=""></textarea>
+                        <textarea class="w-full min-h-full p-4 rounded-[25px]" placeholder="inserisci il commento" name="" id=""></textarea>
                     </div>
                     <div class="w-1/3 m-5">
-                        <div class="w-full p-5 flex justify-center">
-                            <input class="w-full" type="text" placeholder="tag nome utente per la risposta">
+                        <div class="w-full p-5 flex justify-center ">
+                            <input class="w-full rounded-full" type="text" placeholder="tag nome utente per la risposta">
                         </div>
                         <div class="w-full p-5 flex justify-center">
                             <button class="py-2 px-4 bg-secondary rounded-full text-white">Rispondi</button>
